k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caltrack-backend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: caltrack-backend
  template:
    metadata:
      labels:
        component: caltrack-backend
    spec:
      containers:
        - name: caltrack-backend
          image: naveenmraja/caltrack-backend:1.0.1
          ports:
            - containerPort: 8080
