k8s/backend-cluseter-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: caltrack-backend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: caltrack-backend
  ports:
    - port: 8080
      targetPort: 8080
