k8s/nginx-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: caltrack-nginx-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: caltrack-nginx
  ports:
    - port: 80
      targetPort: 80
